--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "yuvadaud",
-    "short_name": "yuvadaud",
+    "name": "Yuva Daud",
+    "short_name": "Yuva Daud",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
